{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 66,
  "lineage": "abc16d4d-e290-6589-f19e-a6b6c0303d07",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0fb0b230890ccd1e6",
            "arn": "arn:aws:ec2:us-east-1:411960113601:instance/i-07e03c878b1e6a802",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "dalla-backend-instance-profile",
            "id": "i-07e03c878b1e6a802",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dalla-deploy",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0aff0e3e02f0b7f58"
              }
            ],
            "primary_network_interface_id": "eni-0aff0e3e02f0b7f58",
            "private_dns": "ip-10-0-1-198.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.198",
            "public_dns": "ec2-34-200-233-247.compute-1.amazonaws.com",
            "public_ip": "34.200.233.247",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09ab90b2216f34ad1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00bf1dfa0cce86f5d",
            "tags": {
              "Name": "dalla-backend-ec2"
            },
            "tags_all": {
              "Name": "dalla-backend-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fe9ac9be43975eb5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "411960113601",
            "id": "i-07e03c878b1e6a802",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_cognito_user_pool.main",
            "aws_cognito_user_pool_client.app",
            "aws_db_instance.main",
            "aws_db_subnet_group.main",
            "aws_iam_instance_profile.backend",
            "aws_iam_role.backend",
            "aws_security_group.alb",
            "aws_security_group.backend",
            "aws_security_group.rds",
            "aws_ssm_parameter.cognito_app_client_id",
            "aws_ssm_parameter.cognito_region",
            "aws_ssm_parameter.cognito_user_pool_id",
            "aws_ssm_parameter.database_url",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.ec2_assume_role",
            "random_password.db_password"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411960113601:internet-gateway/igw-0d28a90e5b3b599b1",
            "id": "igw-0d28a90e5b3b599b1",
            "owner_id": "411960113601",
            "region": "us-east-1",
            "tags": {
              "Name": "dalla-igw"
            },
            "tags_all": {
              "Name": "dalla-igw"
            },
            "vpc_id": "vpc-07399c3659d3f7f8c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:411960113601:loadbalancer/app/dalla-backend-alb/cef178ac814f7c46",
            "arn_suffix": "app/dalla-backend-alb/cef178ac814f7c46",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dalla-backend-alb-682637745.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:411960113601:loadbalancer/app/dalla-backend-alb/cef178ac814f7c46",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dalla-backend-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0b4e656e306456475"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00bf1dfa0cce86f5d"
              },
              {
                "subnet_id": "subnet-05e6ab5ad2b614848"
              }
            ],
            "subnets": [
              "subnet-00bf1dfa0cce86f5d",
              "subnet-05e6ab5ad2b614848"
            ],
            "tags": {
              "Name": "dalla-backend-alb"
            },
            "tags_all": {
              "Name": "dalla-backend-alb"
            },
            "vpc_id": "vpc-07399c3659d3f7f8c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:411960113601:loadbalancer/app/dalla-backend-alb/cef178ac814f7c46"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:411960113601:listener/app/dalla-backend-alb/cef178ac814f7c46/395be896a0744bb6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:411960113601:targetgroup/dalla-backend-tg/fbab305d8f0e07aa",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:411960113601:listener/app/dalla-backend-alb/cef178ac814f7c46/395be896a0744bb6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:411960113601:loadbalancer/app/dalla-backend-alb/cef178ac814f7c46",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:411960113601:listener/app/dalla-backend-alb/cef178ac814f7c46/395be896a0744bb6"
          },
          "dependencies": [
            "aws_lb.backend",
            "aws_lb_target_group.backend",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:411960113601:targetgroup/dalla-backend-tg/fbab305d8f0e07aa",
            "arn_suffix": "targetgroup/dalla-backend-tg/fbab305d8f0e07aa",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:411960113601:targetgroup/dalla-backend-tg/fbab305d8f0e07aa",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:411960113601:loadbalancer/app/dalla-backend-alb/cef178ac814f7c46"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dalla-backend-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "dalla-backend-tg"
            },
            "tags_all": {
              "Name": "dalla-backend-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07399c3659d3f7f8c"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:411960113601:targetgroup/dalla-backend-tg/fbab305d8f0e07aa"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:411960113601:targetgroup/dalla-backend-tg/fbab305d8f0e07aa-20260219053518139700000002",
            "port": 8000,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:411960113601:targetgroup/dalla-backend-tg/fbab305d8f0e07aa",
            "target_id": "i-07e03c878b1e6a802"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_cognito_user_pool.main",
            "aws_cognito_user_pool_client.app",
            "aws_db_instance.main",
            "aws_db_subnet_group.main",
            "aws_iam_instance_profile.backend",
            "aws_iam_role.backend",
            "aws_instance.backend",
            "aws_lb_target_group.backend",
            "aws_security_group.alb",
            "aws_security_group.backend",
            "aws_security_group.rds",
            "aws_ssm_parameter.cognito_app_client_id",
            "aws_ssm_parameter.cognito_region",
            "aws_ssm_parameter.cognito_user_pool_id",
            "aws_ssm_parameter.database_url",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.ec2_assume_role",
            "random_password.db_password"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411960113601:route-table/rtb-090c5521dccf50117",
            "id": "rtb-090c5521dccf50117",
            "owner_id": "411960113601",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d28a90e5b3b599b1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dalla-public-rt"
            },
            "tags_all": {
              "Name": "dalla-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07399c3659d3f7f8c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "411960113601",
            "id": "rtb-090c5521dccf50117",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ac3c65bb7c437fc",
            "region": "us-east-1",
            "route_table_id": "rtb-090c5521dccf50117",
            "subnet_id": "subnet-00bf1dfa0cce86f5d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d266758f1175623e",
            "region": "us-east-1",
            "route_table_id": "rtb-090c5521dccf50117",
            "subnet_id": "subnet-05e6ab5ad2b614848"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411960113601:security-group/sg-0b4e656e306456475",
            "description": "Allow HTTP/HTTPS from the internet to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b4e656e306456475",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dalla-alb-sg",
            "name_prefix": "",
            "owner_id": "411960113601",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dalla-alb-sg"
            },
            "tags_all": {
              "Name": "dalla-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07399c3659d3f7f8c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "411960113601",
            "id": "sg-0b4e656e306456475",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411960113601:security-group/sg-0fe9ac9be43975eb5",
            "description": "Allow traffic from ALB to backend and SSH for admin",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fe9ac9be43975eb5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from configured CIDR",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Backend port from ALB",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b4e656e306456475"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "dalla-backend-sg",
            "name_prefix": "",
            "owner_id": "411960113601",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dalla-backend-sg"
            },
            "tags_all": {
              "Name": "dalla-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07399c3659d3f7f8c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "411960113601",
            "id": "sg-0fe9ac9be43975eb5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411960113601:security-group/sg-0f983e73d2a432674",
            "description": "Allow Postgres from backend instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f983e73d2a432674",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Postgres from backend SG",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fe9ac9be43975eb5"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "dalla-rds-sg",
            "name_prefix": "",
            "owner_id": "411960113601",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dalla-rds-sg"
            },
            "tags_all": {
              "Name": "dalla-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07399c3659d3f7f8c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "411960113601",
            "id": "sg-0f983e73d2a432674",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.backend",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411960113601:subnet/subnet-00bf1dfa0cce86f5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00bf1dfa0cce86f5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "411960113601",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dalla-public-1"
            },
            "tags_all": {
              "Name": "dalla-public-1"
            },
            "vpc_id": "vpc-07399c3659d3f7f8c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "411960113601",
            "id": "subnet-00bf1dfa0cce86f5d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411960113601:subnet/subnet-05e6ab5ad2b614848",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e6ab5ad2b614848",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "411960113601",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dalla-public-2"
            },
            "tags_all": {
              "Name": "dalla-public-2"
            },
            "vpc_id": "vpc-07399c3659d3f7f8c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "411960113601",
            "id": "subnet-05e6ab5ad2b614848",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411960113601:vpc/vpc-07399c3659d3f7f8c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ae80fc327428c1e0",
            "default_route_table_id": "rtb-0c1af52abff4da3b7",
            "default_security_group_id": "sg-02f2f325a57f8184c",
            "dhcp_options_id": "dopt-07d3e611799e78b61",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07399c3659d3f7f8c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c1af52abff4da3b7",
            "owner_id": "411960113601",
            "region": "us-east-1",
            "tags": {
              "Name": "dalla-vpc"
            },
            "tags_all": {
              "Name": "dalla-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "411960113601",
            "id": "vpc-07399c3659d3f7f8c",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}